--- a/static/sass/custom/typography.scss
+++ b/static/sass/custom/typography.scss
@@ -15,7 +15,7 @@ html {
 
 .headline__title {
     color: $contrast;
-    display: block;
+    display: inline-block;
     font-family: $fontFamily;
     font-size: $fontSize * 1.5;
     font-weight: bold;
