--- a/static/sass/core.scss
+++ b/static/sass/core.scss
@@ -6,6 +6,7 @@
         "vendor/normalize",
         "custom/global",
         "custom/layout",
-        "custom/typography",
-        "custom/breakpoints"
+        "custom/navigation",
+        "custom/typography"
+        // "custom/breakpoints"
 ;
