fix url for taxonomies and refactor template

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -590,7 +590,7 @@ html {
     text-align: left;
 }
 
-.post__meta .post__meta__tags {
+.post__meta .post__meta__taxonomies {
     text-align: right;
 }
 
