--- a/static/sass/custom/layout.scss
+++ b/static/sass/custom/layout.scss
@@ -100,7 +100,7 @@ html {
         text-align: left;
     }
 
-    .post__meta__tags {
+    .post__meta__taxonomies {
         text-align: right;
     }
 }
@@ -142,7 +142,7 @@ html {
         display: table;
         padding: .5em 1.5em;
         width: 100%;
-        
+
         .headline {
             padding: 0;
         }
