--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,6 @@
     </section>
     <main class="content" role="main" id="main-content">
         <h1>Yay!</h1>
-        {{ $baseurl := .Site.BaseURL }}
         {{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") 3 }}
         {{ range $paginator.Pages }}
         <article class="post post--preview">
@@ -18,11 +17,7 @@
                 <ul class="post__meta__infos">
                     <li class="post-meta__date"><time datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "02 January 2006" }}</time></li>
                 </ul>
-                <ul class="post__meta__tags">
-                    {{ range .Params.tags }}
-                    <li><a href="{{ $baseurl }}tags/{{ . }}">{{ . }} </a></li>
-                    {{ end }}
-                </ul>
+                {{ partial "post-taxonomies" . }}
             </footer>
             <section class="post__excerpt">
                 <p>{{ .Summary }}&hellip;</p>
