--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -1,4 +1,3 @@
-{{ $baseurl := .Site.BaseURL }}
 {{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") }}
 {{ range $paginator.Pages }}
 <article class="post post--preview">
@@ -9,11 +8,7 @@
         <ul class="post__meta__infos">
             <li class="post-meta__date"><time datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "02 January 2006" }}</time></li>
         </ul>
-        <ul class="post__meta__tags">
-            {{ range .Params.tags }}
-            <li><a href="{{ $baseurl }}tags/{{ . }}">{{ . }} </a></li>
-            {{ end }}
-        </ul>
+        {{ partial "post-taxonomies" . }}
     </footer>
 </article>
 {{ end }}
