--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -1,13 +1,8 @@
-{{ $baseurl := .Site.BaseURL }}
 <ul class="post__meta__infos">
     <li class="post__meta__author" itemprop="author">{{ .Site.Params.author }}</li>
     <li class="post__meta__date"><time datetime="{{ .Date.Format "2006-01-02" }}" itemprop="datePublished">{{ .Date.Format "02 January 2006" }}</time></li>
 </ul>
-<ul class="post__meta__tags">
-    {{ range .Params.tags }}
-    <li><a href="{{ $baseurl }}tags/{{ . }}">{{ . }} </a></li>
-    {{ end }}
-</ul>
+{{ partial "post-taxonomies" . }}
 <meta itemprop="url" content="{{ .Permalink }}">
 <meta itemprop="wordCount" content="{{ .WordCount }}" />
 <meta itemprop="timeRequired" content="{{ .ReadingTime }} Min" />
