--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -7,19 +7,19 @@
         <li><a href="{{.URL}}">{{ .Name }}</a></li>
         {{ end }}
         {{ end }}
-        {{ if .Site.Params.twitter }}
+        {{ with .Site.Params.twitter }}
         <li class="twitter">
-            <a href="https://twitter.com/{{ .Site.Params.twitter }}" title="Follow me">Twitter</a>
+            <a href="https://twitter.com/{{ . }}" title="Follow me">Twitter</a>
         </li>
         {{ end }}
-        {{ if .Site.Params.github }}
+        {{ with .Site.Params.github }}
         <li class="github">
-            <a href="https://github.com/{{ .Site.Params.github }}" title="Fork me">GitHub</a>
+            <a href="https://github.com/{{ . }}" title="Fork me">GitHub</a>
         </li>
         {{ end }}
-        {{ if .Site.Params.linkedin }}
+        {{ with .Site.Params.linkedin }}
         <li class="linkedin">
-            <a href="https://fr.linkedin.com/in/{{ .Site.Params.linkedin }}" title="About me">LinkedIn</a>
+            <a href="https://fr.linkedin.com/in/{{ . }}" title="About me">LinkedIn</a>
         </li>
         {{ end }}
     </ul>
