--- a/layouts/partials/meta_twittercard.html
+++ b/layouts/partials/meta_twittercard.html
@@ -1,3 +1,4 @@
+{{ if .Site.Params.twitter }}
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="{{ .Title }}" />
@@ -5,5 +6,6 @@
 <meta name="twitter:url" content="{{ .Permalink }}" />
 <meta name="twitter:image:src" content="{{ .Site.BaseURL }}/media/twitter-card.jpg">
 <meta name="twitter:domain" content="{{ .Site.BaseURL }}">
-<meta name="twitter:site" content="@{{ .Site.Params.twitter }}" />
-<meta name="twitter:creator" content="@{{ .Site.Params.twitter }}" />
+{{ with .Site.Params.twitter }}<meta name="twitter:site" content="@{{ . }}" />{{ end }}
+{{ with .Site.Params.twitter }}<meta name="twitter:creator" content="@{{ . }}" />{{ end }}
+{{ end }}
