--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -1,5 +1,5 @@
 <ul class="post__meta__infos">
-    <li class="post__meta__author" itemprop="author">{{ .Site.Params.author }}</li>
+    {{ with .Site.Params.author }}<li class="post__meta__author" itemprop="author">{{ . }}</li>{{ end }}
     <li class="post__meta__date"><time datetime="{{ .Date.Format "2006-01-02" }}" itemprop="datePublished">{{ .Date.Format "02 January 2006" }}</time></li>
 </ul>
 {{ partial "post-taxonomies" . }}
