--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <footer class="legal" role="contentinfo">
-    <p>Performed by <a href="//gohugo.io" title="Hugo">Hugo</a> with the <a href="//github.com/the2ne/hugo-frais" title="Theme by Olivier Fredon">Hugo Frais</a> theme.</p>
+    <p>Performed by <a href="//gohugo.io" title="Hugo :: A fast and modern static website engine">Hugo</a> with the <a href="//github.com/the2ne/hugo-frais" title="Theme by Olivier Fredon">Hugo Frais</a> theme.</p>
 </footer>
