--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,6 +9,6 @@
     <base href="{{ .Site.BaseURL }}">
     {{ .Hugo.Generator }}
     <link rel="canonical" href="{{ .Permalink }}">
-    {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
+    {{ if .RSSLink }}<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
     {{ partial "head_includes.html" . }}
 </head>
