Making the Yay! headline configurable on the landing page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
         {{ partial "navigation" . }}
     </section>
     <main class="content" role="main" id="main-content">
-        <h1>Yay!</h1>
+        <h1>{{ .Site.Params.indexHeadline | default "Yay!" }}</h1>
         {{ $paginator := .Paginate (where .Data.Pages.ByDate.Reverse "Type" "post") 3 }}
         {{ range $paginator.Pages }}
         <article class="post post--preview">
