--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,8 +7,9 @@
     {{ partial "meta_opengraph.html" . }}
     {{ partial "meta_twittercard.html" . }}
     <base href="{{ .Site.BaseURL }}">
-    {{ .Hugo.Generator }}
     <link rel="canonical" href="{{ .Permalink }}">
-    {{ if .RSSLink }}<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
+    {{ with .OutputFormats.Get "rss" -}}
+        {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+    {{ end -}}
     {{ partial "head_includes.html" . }}
 </head>
