--- a/layouts/partials/head_includes.html
+++ b/layouts/partials/head_includes.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css">
 
 <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
 <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
